--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?> 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,9 +12,16 @@
         android:text="Привет, ТСД!"
         android:textSize="18sp"/>
 		
-	<Button
-    android:id="@+id/startInventoryButton"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Начать инвентаризацию"/>
+    <Button
+        android:id="@+id/startInventoryButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Начать инвентаризацию"/>
+
+    <!-- Добавлена новая кнопка для перехода в исходящий документ -->
+    <Button
+        android:id="@+id/viewOutgoingDocumentButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Посмотреть исходящий документ"/>
 </LinearLayout>
