--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -1,4 +1,5 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -12,5 +13,14 @@
         android:textSize="18sp"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="24dp" />
+		
+	<!-- Вставьте этот код в ваш ConstraintLayout или FrameLayout в activity_document.xml -->
+	<com.google.android.material.floatingactionbutton.FloatingActionButton
+		android:id="@+id/fab_scan"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_gravity="bottom|end"
+		android:layout_margin="16dp"
+		app:srcCompat="@android:drawable/ic_menu_camera" /> 
 
 </LinearLayout>
