--- a/app/src/main/res/layout/activity_document.xml
+++ b/app/src/main/res/layout/activity_document.xml
@@ -1,22 +1,50 @@
-<androidx.constraintlayout.widget.ConstraintLayout ...>
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".ui.inventory.InventoryDetailFragment"> <!-- Укажите правильный путь к вашему фрагменту -->
 
+    <!-- Список позиций документа -->
+    <!-- clipToPadding="false" и paddingBottom нужны, чтобы последний элемент не перекрывался кнопкой FAB -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/itemsRecyclerView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
+        android:paddingBottom="8dp"
+        android:clipToPadding="false"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/sendButton" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/sendButton"
+        tools:listitem="@layout/list_item_inventory" />
 
-    <Button
+    <!-- Кнопка для отправки документа на сервер -->
+    <!-- Используем MaterialButton для современного вида и добавляем отступы -->
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/sendButton"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:paddingVertical="12dp"
         android:text="Отправить документ"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Плавающая кнопка для запуска сканирования -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_scan"
-        ...
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:contentDescription="Сканировать"
+        app:srcCompat="@android:drawable/ic_menu_camera"
         app:layout_constraintBottom_toTopOf="@id/sendButton"
         app:layout_constraintEnd_toEndOf="parent" />
 
